Fixed hover in projects section on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
-/* Reset default styles */
-body,
+/* Global styles */
 html {
   margin: 0;
   height: 100%;
-}
-
-html {
   scroll-behavior: smooth;
 }
 
@@ -22,14 +18,35 @@ body {
   font-optical-sizing: auto;
 }
 
+main {
+  padding-top: 60px;
+}
+
 h2 {
   text-align: center;
 }
+
+
+h1 {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+p,
+li {
+  color: #777;
+}
+
 
 /* Header styles */
 .navbar-dark .navbar-nav .nav-link {
   color: white !important;
   z-index: 100;
+}
+
+.navbar-nav .nav-link:hover {
+  color: green !important;
 }
 
 header {
@@ -48,19 +65,11 @@ header nav a {
   font-size: 18px;
 }
 
-.navbar-nav .nav-link:hover {
-  color: green !important;
-}
-
 header h1 {
   margin: 0;
 }
 
-/* Main content styles */
-main {
-  padding-top: 60px;
-}
-
+/* Section styles */
 section {
   display: flex;
   justify-content: center;
@@ -83,38 +92,10 @@ section ul li {
   text-align: center; /* Center the text */
 }
 
-/* Other styles */
-h1 {
-  font-size: 36px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-p,
-li {
-  color: #777;
-}
-
 .font-color {
   color: black;
 }
 
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
 
 .navbar {
   position: fixed;
@@ -139,6 +120,7 @@ li {
 .card:hover {
   background-color: #f5f5f5;
 }
+
 
 /* ABOUT SECTION  */
 #about {
@@ -547,6 +529,7 @@ li {
   font-size: 1.05em; /* Smaller text */
 }
 
+
 /* Papers Section */
 #papers {
   position: relative;
@@ -569,7 +552,7 @@ li {
 
 .paper:hover {
   box-shadow: 0 0 20px rgba(0, 128, 0, 0.5);
-  transform: scale(1.01);
+  transform: none;
   z-index: 1;
 }
 
@@ -689,6 +672,10 @@ footer {
   div:hover {
     transform: none !important; /* Disables any transform on hover for all divs */
   }
+
+  #projects .list-group-item:hover {
+    transform: none;
+  }
   
 }
 
@@ -706,7 +693,6 @@ footer {
     margin: 0 0 0.8em;
     margin-top: 2em;
   }
-
 
   /* About section */
   .about h2 {
@@ -762,13 +748,17 @@ footer {
     text-align: center; /* Change the text alignment for smaller screens */
     padding-bottom: 10px;
   }
-
+  
 
   div:hover {
     transform: none !important; /* Disables any transform on hover for all divs */
   }
-  
-}
+
+  #projects .list-group-item:hover {
+    transform: none;
+  }
+} 
+
 
 
 /* Scrollbar styles */
